# credit_card_fraud_detection

simple_credit_card_fraud_detection/: README.md  pyproject.toml
simple_credit_card_fraud_detection/app/core/: config.py
simple_credit_card_fraud_detection/notebooks/: credit_card.ipynb
